[metadata]
description-file = README.md

[nosetests]
with-doctest=1
ignore-files=.*\.out\.py
ignore-files=setup.py


# Enable building of universal wheels so we can publish wheel
# distribution archives to PyPI (the Python package index)
# that are compatible with Python 2 as well as Python 3.

[wheel]
universal=1


# The INCLUDE and LIB directories to build the '_hylp' extension.
# You may also set them using the options '-I' and '-L'.
[build_ext]

# List of directories to search for 'hylp.h' (separated by ':').
#include_dirs=/usr/local/include:../../include

# List of directories to search for 'libhylp.a' (separated by ':').
#library_dirs=/usr/local/lib:../../lib

# An alternative compiler to build the extension.
#compiler=mingw32

# Additional preprocessor definitions might be required.
#define=YAML_DECLARE_STATIC

# The following options are used to build PyYAML Windows installer
# for Python 2.5 on my PC:
#include_dirs=../../../libhylp/tags/0.1.4/include
#library_dirs=../../../libhylp/tags/0.1.4/win32/vs2003/output/release/lib
#define=YAML_DECLARE_STATIC

# The following options are used to build PyYAML Windows installer
# for Python 2.6, 2.7, 3.0, 3.1 and 3.2 on my PC:
#include_dirs=../../../libhylp/tags/0.1.4/include
#library_dirs=../../../libhylp/tags/0.1.4/win32/vs2008/output/release/lib
#define=YAML_DECLARE_STATIC

